# wintimer

./: analytics.py  idle_utils.py  log_utils.py  main.py  pyproject.toml  window_utils.py
