[tool.poetry]
name = "timer"
version = "0.1.0"
description = ""
authors = ["Bruno Portis <bruno.portis@portis.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
rich = "^13.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
